--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "node build.js",
+    "watch": "nodemon --watch src --watch templates --watch content --exec npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,5 +14,8 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "marked": "^14.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
