--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "node build.js",
     "watch": "nodemon --watch src --watch templates --watch content --exec npm run build",
     "deploy": "gh-pages -d dist",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -17,7 +19,12 @@
     "marked": "^14.0.0"
   },
   "devDependencies": {
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "gh-pages": "^6.1.1",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.3"
   }
 }
