--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
-    "marked": "^14.0.0"
+    "marked": "^14.0.0",
+    "sitemap": "^8.0.0"
   },
   "devDependencies": {
     "eslint": "^9.9.0",
